# humble_bundle_viewer

./: .alexrc.json  .cspell.json  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cspell.json  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt
.github/: AGENTS.md  CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: github-customization-auditor.agent.md  repo-alignment-review.agent.md
.github/instructions/: architecture-boundaries.instructions.md  cli-runtime.instructions.md  download-labeling.instructions.md  frontend-testing.instructions.md  github-customizations.instructions.md  project-management.instructions.md  readme-standards.instructions.md  secrets-and-artifacts.instructions.md  subproduct-enrichment.instructions.md  testing.instructions.md
.github/prompts/: audit-frontend-style-consistency.prompt.md  cli-change-checklist.prompt.md  prepare-subagent-brief.prompt.md  refresh-subproduct-report.prompt.md  review-github-customization-change.prompt.md  review-repo-change-alignment.prompt.md  subproduct-cache-triage.prompt.md
.github/skills/: README.md
.github/workflows/: tests.yml  validate-customizations.yml
backend/: .env.example  config.yaml  requirements.txt
docs/: agent-guidelines.md  index.md
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
tools/: start_dev.ps1  start_dev.py
(+348 files in other folders)
